--- a/src/MEGASync/transfers/gui/macx/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/macx/TransferManager.ui
@@ -2225,7 +2225,7 @@ QToolButton
            <property name="currentIndex">
             <number>0</number>
            </property>
-           <widget class="QWidget" name="pStatusHeaderInfo">
+           <widget class="TransferManagerStatusHeaderWidget" name="pStatusHeaderInfo">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
               <horstretch>0</horstretch>
@@ -2251,91 +2251,6 @@ QToolButton
              <property name="bottomMargin">
               <number>5</number>
              </property>
-             <item alignment="Qt::AlignLeft|Qt::AlignTop">
-              <widget class="QLabel" name="lPaused">
-               <property name="text">
-                <string>All paused</string>
-               </property>
-              </widget>
-             </item>
-             <item alignment="Qt::AlignTop">
-              <widget class="QWidget" name="pTransferOverQuota" native="true">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <layout class="QVBoxLayout" name="verticalLayout_5">
-                <property name="spacing">
-                 <number>5</number>
-                </property>
-                <property name="sizeConstraint">
-                 <enum>QLayout::SetMinimumSize</enum>
-                </property>
-                <property name="leftMargin">
-                 <number>10</number>
-                </property>
-                <property name="topMargin">
-                 <number>0</number>
-                </property>
-                <property name="rightMargin">
-                 <number>0</number>
-                </property>
-                <property name="bottomMargin">
-                 <number>5</number>
-                </property>
-                <item alignment="Qt::AlignLeft">
-                 <widget class="QLabel" name="lTransferOverQuota">
-                  <property name="text">
-                   <string>Transfer quota exceeded</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLabel" name="lTransferOverQuotaInfo">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLabel" name="lTransferOverQuotaMoreAbout">
-                  <property name="sizePolicy">
-                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                   </sizepolicy>
-                  </property>
-                  <property name="minimumSize">
-                   <size>
-                    <width>0</width>
-                    <height>20</height>
-                   </size>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <family>Lato</family>
-                    <pointsize>-1</pointsize>
-                    <bold>false</bold>
-                    <underline>true</underline>
-                   </font>
-                  </property>
-                  <property name="openExternalLinks">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </widget>
-             </item>
-             <item alignment="Qt::AlignLeft|Qt::AlignTop">
-              <widget class="QLabel" name="lStorageOverQuota">
-               <property name="text">
-                <string/>
-               </property>
-              </widget>
-             </item>
             </layout>
            </widget>
            <widget class="QWidget" name="pSearchHeaderInfo">
@@ -2992,6 +2907,12 @@ QToolButton
    <class>MediaTypeFilterWidget</class>
    <extends>QWidget</extends>
    <header>MediaTypeFilterWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TransferManagerStatusHeaderWidget</class>
+   <extends>QWidget</extends>
+   <header>TransferManagerStatusHeaderWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
