--- a/src/MEGASync/gui/ui/DownloadFromMegaDialog.ui
+++ b/src/MEGASync/gui/ui/DownloadFromMegaDialog.ui
@@ -109,7 +109,7 @@ font-weight: 600;
          </property>
          <property name="maximumSize">
           <size>
-           <width>90</width>
+           <width>16777215</width>
            <height>36</height>
           </size>
          </property>
@@ -200,7 +200,7 @@ font-weight: 600;
         </property>
         <property name="maximumSize">
          <size>
-          <width>90</width>
+          <width>16777215</width>
           <height>36</height>
          </size>
         </property>
@@ -234,7 +234,7 @@ font-weight: 600;
         </property>
         <property name="maximumSize">
          <size>
-          <width>80</width>
+          <width>16777215</width>
           <height>36</height>
          </size>
         </property>
