--- a/src/MEGASync/gui/ui/ProxySettings.ui
+++ b/src/MEGASync/gui/ui/ProxySettings.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>471</width>
-    <height>390</height>
+    <width>470</width>
+    <height>430</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -22,13 +22,13 @@
   <property name="minimumSize">
    <size>
     <width>470</width>
-    <height>390</height>
+    <height>430</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>479</width>
-    <height>390</height>
+    <height>430</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -63,7 +63,7 @@
      </property>
      <layout class="QGridLayout" name="gProxyLayout">
       <property name="sizeConstraint">
-       <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
+       <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <property name="leftMargin">
        <number>20</number>
@@ -95,7 +95,7 @@
          <string>Proxy settings:</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTop|Qt::AlignmentFlag::AlignTrailing</set>
+         <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
         </property>
         <property name="margin">
          <number>0</number>
@@ -126,7 +126,7 @@
          <string notr="true"/>
         </property>
         <property name="echoMode">
-         <enum>QLineEdit::EchoMode::Password</enum>
+         <enum>QLineEdit::Password</enum>
         </property>
         <property name="type" stdset="0">
          <string notr="true">mega</string>
@@ -180,7 +180,7 @@
          <string>Username:</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -196,7 +196,7 @@
          <string>Password:</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -206,7 +206,7 @@
          <string>Proxy type:</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -221,7 +221,7 @@
            <cursorShape>PointingHandCursor</cursorShape>
           </property>
           <property name="focusPolicy">
-           <enum>Qt::FocusPolicy::StrongFocus</enum>
+           <enum>Qt::StrongFocus</enum>
           </property>
           <property name="text">
            <string>No Proxy</string>
@@ -234,7 +234,7 @@
            <cursorShape>PointingHandCursor</cursorShape>
           </property>
           <property name="focusPolicy">
-           <enum>Qt::FocusPolicy::StrongFocus</enum>
+           <enum>Qt::StrongFocus</enum>
           </property>
           <property name="styleSheet">
            <string notr="true"/>
@@ -252,7 +252,7 @@
          <string>Server:</string>
         </property>
         <property name="alignment">
-         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -312,18 +312,18 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>240</width>
+            <width>230</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>240</width>
+            <width>230</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="inputMethodHints">
-           <set>Qt::InputMethodHint::ImhUrlCharactersOnly</set>
+           <set>Qt::ImhUrlCharactersOnly</set>
           </property>
           <property name="text">
            <string notr="true"/>
@@ -339,7 +339,7 @@
            <string notr="true">:</string>
           </property>
           <property name="alignment">
-           <set>Qt::AlignmentFlag::AlignCenter</set>
+           <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
@@ -356,24 +356,24 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>50</width>
+            <width>65</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>50</width>
+            <width>65</width>
             <height>16777215</height>
            </size>
           </property>
           <property name="inputMethodHints">
-           <set>Qt::InputMethodHint::ImhDigitsOnly</set>
+           <set>Qt::ImhDigitsOnly</set>
           </property>
           <property name="text">
            <string notr="true"/>
           </property>
           <property name="alignment">
-           <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
           </property>
           <property name="type" stdset="0">
            <string notr="true">mega</string>
@@ -412,7 +412,7 @@
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
