--- a/src/MEGASync/gui/ui/RemoveSyncConfirmationDialog.ui
+++ b/src/MEGASync/gui/ui/RemoveSyncConfirmationDialog.ui
@@ -39,144 +39,153 @@ max-height: 96px;
 }
 </string>
   </property>
-  <widget class="QLabel" name="labelFolderIcon">
-   <property name="geometry">
-    <rect>
-     <x>24</x>
-     <y>24</y>
-     <width>96</width>
-     <height>96</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelHeader">
-   <property name="geometry">
-    <rect>
-     <x>144</x>
-     <y>24</y>
-     <width>432</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string>Remove this sync?</string>
-   </property>
-   <property name="type" stdset="0">
-    <string notr="true">title</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelMessage">
-   <property name="geometry">
-    <rect>
-     <x>144</x>
-     <y>56</y>
-     <width>432</width>
-     <height>36</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>The data on your computer and in MEGA will not be removed, but the folders will no longer sync with each other.</string>
-   </property>
-   <property name="wordWrap">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="bCancel">
-   <property name="geometry">
-    <rect>
-     <x>377</x>
-     <y>116</y>
-     <width>84</width>
-     <height>36</height>
-    </rect>
-   </property>
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>84</width>
-     <height>36</height>
-    </size>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>77</width>
-     <height>36</height>
-    </size>
-   </property>
-   <property name="cursor">
-    <cursorShape>PointingHandCursor</cursorShape>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string>Cancel</string>
-   </property>
-   <property name="flat">
-    <bool>false</bool>
-   </property>
-   <property name="type" stdset="0">
-    <string notr="true">outline</string>
-   </property>
-   <property name="dimension" stdset="0">
-    <string notr="true">medium</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="bRemove">
-   <property name="geometry">
-    <rect>
-     <x>470</x>
-     <y>116</y>
-     <width>111</width>
-     <height>36</height>
-    </rect>
-   </property>
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>111</width>
-     <height>36</height>
-    </size>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>77</width>
-     <height>36</height>
-    </size>
-   </property>
-   <property name="cursor">
-    <cursorShape>PointingHandCursor</cursorShape>
-   </property>
-   <property name="text">
-    <string>Remove</string>
-   </property>
-   <property name="icon">
-    <iconset resource="../Resources.qrc">
-     <normaloff>:/images/x.svg</normaloff>:/images/x.svg</iconset>
-   </property>
-   <property name="type" stdset="0">
-    <string notr="true">primary</string>
-   </property>
-   <property name="dimension" stdset="0">
-    <string notr="true">medium</string>
-   </property>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="labelFolderIcon">
+       <property name="minimumSize">
+        <size>
+         <width>96</width>
+         <height>96</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>20</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="labelHeader">
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>Remove this sync?</string>
+         </property>
+         <property name="type" stdset="0">
+          <string notr="true">title</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="labelMessage">
+         <property name="text">
+          <string>The data on your computer and in MEGA will not be removed, but the folders will no longer sync with each other.</string>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,0">
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="bCancel">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>84</width>
+         <height>36</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>36</height>
+        </size>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>Cancel</string>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string notr="true">outline</string>
+       </property>
+       <property name="dimension" stdset="0">
+        <string notr="true">medium</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="bRemove">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>84</width>
+         <height>36</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>36</height>
+        </size>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="text">
+        <string>Remove</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../Resources.qrc">
+         <normaloff>:/images/x.svg</normaloff>:/images/x.svg</iconset>
+       </property>
+       <property name="type" stdset="0">
+        <string notr="true">primary</string>
+       </property>
+       <property name="dimension" stdset="0">
+        <string notr="true">medium</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
  <resources>
   <include location="../Resources.qrc"/>
